--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.6.5",
     "leaflet": "^1.7.1",
     "vue": "^2.6.11",
+    "vue-browser-geolocation": "^1.8.0",
     "vue2-leaflet": "^2.6.0"
   },
   "devDependencies": {
