--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
+    "vue-router": "^3.4.7",
     "vue2-leaflet": "^2.6.0"
   },
   "devDependencies": {
